--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-# Godot 4+ specific ignores
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+*.import
 .godot/
-/android/
+
+# Mono-specific ignores
+.mono/
+data_*/
+addons/Todo_Manager/todo.cfg
+*.csproj
+*.sln
+
+.vscode/
